# pysclearn

./: .gitignore  Example.ipynb  pyproject.toml
sclearn/: classifiers.py  preprocessing.py
