[tool.poetry]
name = "pysclearn"
version = "0.1.0"
description = "A tool for single-cell well generalized assignment"
authors = ["Vladimir Shitov <vladimirshitov98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
